gramatica.txt

S -> EoFStart Settings inicio Body fin Subroutines EoFEnd
Settings -> SettingsConst Settings
Settings -> SettingsTypes Settings
Settings -> SettingsVar Settings
Settings ->  
SettingsConst -> const AssignationConst
SettingsTypes -> tipos AssignationTypes
SettingsVar -> var AssignationVar
AssignationConst -> Assignation ListAssignations
AssignationTypes -> Object ListObject
AssignationVar -> Declaration ListDeclarations
Object -> 
Object -> tk_id tk_dospuntos registro tk_llave_izq AssignationVar tk_llave_der
ListObject -> Object ListObject
ListObject -> 
Declaration -> tk_id tk_dospuntos Tipo
Declaration -> 
ListDeclarations -> Declaration ListDeclarations
ListDeclarations -> 
ListAssignations -> Assignation ListAssignations
ListAssignations -> 
Assignation -> tk_id ListId tk_asig Expression
Assignation ->
ListId -> tk_coma tk_id ListId
ListId ->
Expression -> tk_resta Expression
Expression -> tk_par_izq Expression tk_par_der OtraExpression
Expression -> tk_id LlamadaFuncion OtraExpression
Expression -> Constante OtraExpression
OtraExpression -> Operador Expression
OtraExpression ->
Constante -> tk_num
Constante -> tk_cadena
Constante -> TRUE
Constante -> FALSE
Operador -> tk_suma
Operador -> tk_resta
Operador -> tk_mult
Operador -> tk_division
Operador -> tk_mod
Operador -> tk_igualdad
Operador -> tk_distinto
Operador -> tk_mayor
Operador -> tk_mayorigual
Operador -> tk_menor
Operador -> tk_menorigual
Operador -> and
Operador -> or
Tipo -> numerico
Tipo -> cadena
Tipo -> vector tk_brac_izq Expression tk_brac_der Tipo
Tipo -> logico
Body -> 
Body -> Sentences ListSentences
Sentence -> Assignation
Sentence -> Declaration
Sentence -> Conditional
Sentence -> CallToFunction
Sentence -> Loop
